Improves security and role-based access control
- Enhances security configuration by defining public endpoints and refining access rules.
- Introduces `PublicEndpoints` to centralize publicly accessible paths.
- Enables method security for more granular control, restricting access based on user roles and object ownership.
- Modifies permission checks for pedidos and produtos, centralizing ownership checks and restricting access based on roles.
- Adds endpoint to list authenticated user's orders.
- Fixes Usuario-Restaurante relationship
- Improves JWT handling and error responses.